tests/neg/effects-classOf-1.scala
class phantomClassOf {
  classOf[Pure] // error
  classOf[Impure] // error
}
